# ccheck

./: README.md  build.sh  meson.build  src_test.sh  test.sh
src/: logger.c  logger.h  main.c
src_test/: add.h  greetings.c  greetings.h  main.c
tests/: cstr.c  relative_path.c
